<resources>
    <string name="app_name">RecyclePlasticChecker</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btCodeCheck">Code Check</string>
    <string name="fragAbout">About</string>
    <string name="fragRules">Rules</string>
    <string name="btRedeem">Redeem</string>
    <string name="btQuiz">Quiz</string>
    <string name="btProfile">Profile</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="testing_text">testing</string>
    <string name="detect">DETECT</string>
    <string name="code_check">CodeCheck</string>
    <string name="btLocation">Location</string>
    <string name="recyclecheck">Upload image for points, photo needed to include \n1. Your "Face" while throwing recyclable plastic.\n2. Photo of recycle code of the plastic product you are throwing.\n3. Minimum 3 photo </string>
    <string name="submit_button">Submit</string>
    <string name="title_Recycle_question">Recycle Quiz(%1$d/%2$d)</string>
    <string name="about_text">\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\tVersion 1.0\n\nRecycle Plastic Checker will help you to identify what plastic type can be recycled.\n</string>
    <string name="ClickToStart">Click To Start</string>
    <string name="BackHome">Back To Menu</string>
    <string name="TryAgain">Try Again</string>
    <string name="GoHome">Back To Home</string>
    <string name="btPlastic_Recycle_Check">Recycle Check</string>
    <string name="registeration_success">Register Successfully</string>
    <string name="Logout">Logout</string>
    <string name="lazada">Lazada 15% OFF Voucher Code</string>
    <string name="ebay">Ebay 15% OFF Voucher Code</string>
    <string name="shopee">Shopee 10% OFF Voucher Code</string>
    <string name="zalora">Zalora 20% OFF Voucher Code</string>
    <string name="rules_text">\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\tRules\n\n1. First you must register as a member to perform redeem point.\n2. You needed to upload a minimum of 3 pictures per uploads to get verify and get points.\n3. You email address must be valid if not you cannot receive point from admin!\n4. The quiz game must be correct 5 question, if you wrong 1 question your game END!  </string>
    <string name="CodeLazada">\t\t\t\t\t\t\t\t\t\t\t\tCODE: LAZADA15</string>
    <string name="CodeZalora">\t\t\t\t\t\t\t\t\t\t\t\tCODE: ZALORA20</string>
    <string name="CodeShoppe">\t\t\t\t\t\t\t\t\t\t\tCODE: SHOPEERM10</string>
    <string name="CodeEbay">\t\t\t\t\t\t\t\t\t\t\t\t\tCODE: EBAY15</string>
    <string name="SearchSymbolFound">Search Symbol Found</string>
</resources>
